--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
-.App {
-  text-align: center;
+#main-menu{
+  
+    position: relative;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.main-menu ul li{
+    padding: 24px 24px;
+    font-weight: 500;
+    cursor: pointer;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.main-menu ul li a{
+   display: inline-block;
+   width: 100%;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.main-menu ul li ul{
+    position: absolute;
+    bottom: 0;
+    padding: 20px 20px;
+    transform: translateY(100%);
+    background-color: white;
+    color: black;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    border: 1px solid gray;
+    visibility: hidden;
+  
 }
-
-.App-link {
-  color: #61dafb;
+.main-menu ul ul li{
+    margin-right: 50px;
+    padding: 0;
+    padding-bottom: 12px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.main-menu ul li:hover ul{
+    visibility: visible;
 }
