heading carousel added

--- a/src/App.css
+++ b/src/App.css
@@ -33,3 +33,9 @@
 .main-menu ul li:hover ul{
     visibility: visible;
 }
+
+.prevent-select {
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
+  }
