--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
     padding: 24px 24px;
     font-weight: 500;
     cursor: pointer;
+    z-index: 999999;
 }
 .main-menu ul li a{
    display: inline-block;
